back n forth wheeeeeee

--- a/webpages/page1.html
+++ b/webpages/page1.html
@@ -10,7 +10,7 @@
 <body>
     <div class="center-container">
         <div class="div-center" style="width: 20%;">
-            <a href="webpages/page1.html">
+            <a href="../index.html">
                 <img src="../images/IMG_0024.png" class="upside-down" style="width: 100%;">
             </a>
         </div>        
