--- a/webpages/eyes.html
+++ b/webpages/eyes.html
@@ -1,11 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>eyes</title>
+    <link rel="stylesheet" href="../style.css">
+    <script src="../scripts/eyes.js"></script>
 </head>
+
 <body>
-    
+    <div id="background">
+        <main>
+            <div class="center-container">
+                <div class="div-center">
+                    <h2>
+                        <p>do you remember when you were a child, and you would close your eyes, and your brain
+                            would create vivid images and colors to keep you entertained? And as you grew older,
+                            they went away. Adults use all sorts of substances to try to recreate it.</p>
+                        <br>
+                        <p>But did you notice when we stopped letting computers dream?</p>
+                    </h2>
+                </div>
+            </div>
+        </main>
+    </div>
 </body>
+</body>
+
 </html>
